--- a/src/style.css
+++ b/src/style.css
@@ -543,14 +543,14 @@ input[type="number"] {
 }
 
 .onboarding__city-popup-btn {
-    border: 1px solid rgba(255, 185, 76, 0.16);
-    background: rgba(255, 185, 76, 0.16);
+    border: 1px solid rgba(255, 185, 76, 0.16);    
     backdrop-filter: blur(3px);
-    color: #FFB94C;
+    color: #421F47;
 }
 
 .onboarding__city-popup-btn:disabled {
-    background: rgba(255, 185, 76, 0.16);    
+    background: rgba(255, 185, 76, 0.16);  
+    
     color: #564F45;
 }
 
