--- a/src/style.css
+++ b/src/style.css
@@ -501,6 +501,8 @@ input[type="number"] {
     align-items: center;
     justify-content: space-between;
     position: relative;
+    
+    
 }
 
 /* это инпут "Нажмите для выбора" на шаге Выбора места рожения, он сделан дивом, чтобы подсказки не всплывали */
@@ -545,11 +547,14 @@ input[type="number"] {
     border-radius: 10px; /* Скругленные углы */
 }
 
-
 .onboarding__city-item {
     color: rgba(255, 255, 255, 0.54);
     cursor: pointer;
     padding-block: 10px;
+    
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
 }
 
 .onboarding__city-item:hover {
@@ -1114,7 +1119,7 @@ input[type="number"] {
     align-items: center;
     justify-content: center;
     color: black;
-    font-size: 18px;
+    font-size: 17px;
     margin-left: 2px;
     font-weight: 500;
 }
