--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,12 @@
     border: 1px solid rgb(255 255 255/.3);
     border-radius: 20px;
     padding: 20px;
-    height: 410px;
-    padding-block: 24px;
+    height: 416px;
+    /*padding-block: 24px;*/
 }
 
 .steps-block--final-screen {
-    height: unset!important; 
+    height: unset !important;
 }
 
 .steps-header {
@@ -134,6 +134,7 @@
     padding: 4px;
     background: rgba(255, 255, 255, 0.10);
     backdrop-filter: blur(3px);
+    height: 56px;
 }
 
 .gender-button {
@@ -275,6 +276,13 @@
     line-height: 20px;
 }
 
+@media (max-width: 500px) {
+    .checkbox-custom--consent {
+        font-size: 12px;
+        line-height: 16px;
+    }
+}
+
 .checkbox-custom--consent__highlight {
     color: #FFB94C;
     opacity: .8
@@ -325,6 +333,7 @@
 .input-icon-container--month {
     width: 140px;
     flex-shrink: 0;
+    flex-grow: 1;
 }
 
 .input-icon-container--time {
@@ -357,7 +366,7 @@
 }
 
 .input-icon-container--city {
-    margin-top: 10px;
+    margin-top: 8px;
 }
 
 .onboarding-select--country {
@@ -412,10 +421,12 @@ input[type="number"] {
 
 .onboarding__nickname-input {
     margin-bottom: 10px;
+    height: 56px;
 }
 
 .onboarding__email-input {
     margin-bottom: 16px;
+    height: 56px;
 }
 
 .step-screen--final {
@@ -424,19 +435,11 @@ input[type="number"] {
 }
 
 .onboarding__final-step-overlay {
-    /*background-image: url('img/bg-stars-rounds.png');  Черный потом сюда вставим */
-    background-image: none;
+    background-image: url('img/bg-stars-rounds-black.png'); 
+    
     background-color: black; /* Базовый цвет фона */
-
-
-    /*Это все убрать, наверное, нужно будет: todo*/
-
-    /*background-image: url('img/galact.png'), !* Верхнее изображение *! url('img/background.png'); !* Нижнее изображение *!*/
-    /*background-repeat: no-repeat, repeat; !* Настройка повторения для обоих изображений *!*/
-    /*background-position: center calc(50% - 100px), center; !* Центрирование обоих изображений *!*/
-    /*background-blend-mode: normal, screen; !* Режим наложения для каждого слоя *!*/
-    /*background-size: 375px auto, auto; !* Масштабирование для обоих изображений *!*/
 }
+
 
 @media (max-width: 500px) {
     .onboarding__final-step-overlay {
@@ -482,9 +485,11 @@ input[type="number"] {
     left: 0;
     top: 0;
     width: 100vw;
-    height: 100vh;
-    background: rgb(0 0 0/.8);
+    height: 100vh;    
+    background: #00000040;
     display: none;
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
 }
 
 .onboarding__city-popup {
@@ -527,21 +532,21 @@ input[type="number"] {
     display: flex;
     justify-content: space-between;
 
-    }
+}
 
 .onboarding__city-input--div {
     width: 28ch;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    
+
     /*color: rgb(255 255 255/0.54);*/
-    
+
     /*white-space: nowrap;*/
     /*overflow: hidden;*/
     /*text-overflow: ellipsis;*/
     /*padding-right: 20px;*/
-    
+
 }
 
 .onboarding__city-input {
@@ -696,7 +701,7 @@ input[type="number"] {
     position: absolute;
     top: 46%;
     left: 46%;
-    animation: scale 16s linear infinite, color5 8s linear 1;
+    animation: scale 16s linear infinite, color5 8s linear infinite;
 }
 
 .game-loader__planet .loader-mini1 {
@@ -707,7 +712,7 @@ input[type="number"] {
     background: #11dbd9;
     top: 48.5%;
     left: 48.5%;
-    animation: move1 8s linear 1, color1 8s linear 1;
+    animation: move1 8s linear infinite, color1 8s linear infinite;
 }
 
 .game-loader__planet .loader-mini2 {
@@ -718,7 +723,7 @@ input[type="number"] {
     background: #11dbd9;
     top: 48.5%;
     left: 48.5%;
-    animation: move2 9s linear 1, color2 9s linear 1;
+    animation: move2 9s linear infinite, color2 9s linear infinite;
 }
 
 .game-loader__planet .loader-mini3 {
@@ -729,7 +734,7 @@ input[type="number"] {
     background: #11dbd9;
     top: 48.5%;
     left: 48.5%;
-    animation: move3 10s linear 1, color3 10s linear 1;
+    animation: move3 10s linear infinite, color3 10s linear infinite;
 }
 
 .game-loader__planet .loader-mini4 {
@@ -740,7 +745,7 @@ input[type="number"] {
     background: #11dbd9;
     top: 48.5%;
     left: 48.5%;
-    animation: move4 11s linear 1, color4 11s linear 1;
+    animation: move4 11s linear infinite, color4 11s linear infinite;
 }
 
 .game-loader__planet .loader-radius1 {
@@ -754,7 +759,7 @@ input[type="number"] {
     top: 44%;
     left: 44%;
     transform: scale(0);
-    animation: orbit1 8s linear 1;
+    animation: orbit1 8s linear infinite;
 }
 
 .game-loader__planet .loader-radius2 {
@@ -768,7 +773,7 @@ input[type="number"] {
     transform: scale(0);
     top: 41%;
     left: 41%;
-    animation: orbit2 9s linear 1;
+    animation: orbit2 9s linear infinite;
 }
 
 .game-loader__planet .loader-radius3 {
@@ -782,7 +787,7 @@ input[type="number"] {
     transform: scale(0);
     top: 38%;
     left: 38%;
-    animation: orbit3 10s linear 1;
+    animation: orbit3 10s linear infinite;
 }
 
 .game-loader__planet .loader-radius4 {
@@ -796,7 +801,7 @@ input[type="number"] {
     transform: scale(0);
     top: 35%;
     left: 35%;
-    animation: orbit4 11s linear 1;
+    animation: orbit4 11s linear infinite;
 }
 
 .game-loader__planet--color .loader-mini1 {
@@ -1164,15 +1169,37 @@ input[type="number"] {
     padding-block: 10px;
 }
 
+.text-input--birth-day {
+    color: rgb(255 255 255 / 0.64) !important;
+    width: 64px!important;
+}
+
+.text-input--birth-year {
+    color: rgb(255 255 255 / 0.64) !important;
+    width: 200px;
+}
+
 .text-input--birth-time {
-    color: rgb(255 255 255 / 0.64)!important;    
-    
-    }
+    height: 56px;
+}
+
 
 .text-input--birth-time::placeholder {
-    color: rgb(255 255 255 / 0.64)!important;
+    color: rgb(255 255 255 / 0.64) !important;    
 }
 
 .text-input--coords {
     color: rgb(255 255 255 / 0.64);
+}
+
+@media (max-width: 500px) {
+    .onboarding-labels--email {
+        margin-top: 0;
+    }
+}
+
+
+.onboarding__comment-label {
+    margin-top: 0px;
+    color: rgb(255 255 255 /.4)
 }
